discussion/kv_engine/170277/170277_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-40647: Remove ConnMap::pendingNotifications

A previous patch bypassed ConnMap pendingNotifications; frontend
threads are now directly notified.

As this makes pendingNotifications and ConnNotifier unnecessary, remove
both.

Change-Id: I1b773957472fc05000665b7099d62598bd8f99da

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-02-09 10:11:16.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-09 10:18:41.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43695/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43695/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18201/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18201/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17462/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16240/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16240/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25560/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25560/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5131/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5131/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15423/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connmap.h:85:10: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    std::mutex releaseLock;
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15423/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connmap.h:85:10:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15423/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36865/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/connmap.h:85:10:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36865/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5073/ : FAILURE

Compile error at [2022-02-09T10:13:27.737Z] ../kv_engine/engines/ep/src/connmap.h:85:10:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5073/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14266/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17152/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
